feat(mcq): rewrite Q36-Q37 in java-modules with multi-line educational format
Q36 (ServiceLoader SPI): correct=A, distractors propose META-INF/services for
named modules, swap provides/uses, or wrongly export provider implementation.

Q37 (Spring/Hibernate/Jackson with JPMS): correct=D, distractors collapse all
packages into one, abuse open module, or rely on single --add-opens flag.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>